Proy/src/generated/PParser.java
// Generated from C:/Users/ADRIAN/Desktop/Compiladores/Proy\PParser.g4 by ANTLR 4.6
package generated;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.6", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INDENT=1, DEDENT=2, NEWLINE=3, DEF=4, IF=5, ELSE=6, WHILE=7, RETURN=8, 
		PRINT=9, LEN=10, IDENTIFIER=11, INTEGER=12, STRING=13, CHAR=14, COMA=15, 
		ASIGN=16, PIZQ=17, PDER=18, SUMA=19, MUL=20, PCIZQ=21, PCDER=22, MENOR=23, 
		MAYOR=24, MENORIGUAL=25, MAYORIGUAL=26, COMPARACION=27, DOSPUNTOS=28, 
		DIV=29, RESTA=30, SPECIAL_COMMENT=31, COMENTARIO_LINEA=32, WS=33;
	public static final int
		RULE_program = 0, RULE_statement = 1, RULE_defStatement = 2, RULE_argList = 3, 
		RULE_moreArgs = 4, RULE_ifStatement = 5, RULE_whileStatement = 6, RULE_returnStatement = 7, 
		RULE_printStatement = 8, RULE_assignStatement = 9, RULE_functionCallStatement = 10, 
		RULE_sequence = 11, RULE_moreStatement = 12, RULE_expression = 13, RULE_comparison = 14, 
		RULE_comparisonElement = 15, RULE_additionExpression = 16, RULE_additionFactor = 17, 
		RULE_additionElement = 18, RULE_multiplicationExpression = 19, RULE_multiplicationFactor = 20, 
		RULE_multiplicationElement = 21, RULE_elementExpression = 22, RULE_elementAccess = 23, 
		RULE_functionCallExpression = 24, RULE_expressionList = 25, RULE_moreExpressions = 26, 
		RULE_primitiveExpression = 27, RULE_listExpression = 28;
	public static final String[] ruleNames = {
		"program", "statement", "defStatement", "argList", "moreArgs", "ifStatement", 
		"whileStatement", "returnStatement", "printStatement", "assignStatement", 
		"functionCallStatement", "sequence", "moreStatement", "expression", "comparison", 
		"comparisonElement", "additionExpression", "additionFactor", "additionElement", 
		"multiplicationExpression", "multiplicationFactor", "multiplicationElement", 
		"elementExpression", "elementAccess", "functionCallExpression", "expressionList", 
		"moreExpressions", "primitiveExpression", "listExpression"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, "'def'", "'if'", "'else'", "'while'", "'return'", 
		"'print'", "'len'", null, null, null, null, "','", "'='", "'('", "')'", 
		"'+'", "'*'", "'['", "']'", "'<'", "'>'", "'<='", "'>='", "'=='", "':'", 
		"'/'", "'-'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "INDENT", "DEDENT", "NEWLINE", "DEF", "IF", "ELSE", "WHILE", "RETURN", 
		"PRINT", "LEN", "IDENTIFIER", "INTEGER", "STRING", "CHAR", "COMA", "ASIGN", 
		"PIZQ", "PDER", "SUMA", "MUL", "PCIZQ", "PCDER", "MENOR", "MAYOR", "MENORIGUAL", 
		"MAYORIGUAL", "COMPARACION", "DOSPUNTOS", "DIV", "RESTA", "SPECIAL_COMMENT", 
		"COMENTARIO_LINEA", "WS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
	 
		public ProgramContext() { }
		public void copyFrom(ProgramContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ProgrmContext extends ProgramContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public TerminalNode EOF() { return getToken(PParser.EOF, 0); }
		public ProgrmContext(ProgramContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PParserVisitor ) return ((PParserVisitor<? extends T>)visitor).visitProgrm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			_localctx = new ProgrmContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			statement();
			setState(62);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DEF) | (1L << IF) | (1L << WHILE) | (1L << RETURN) | (1L << PRINT) | (1L << LEN) | (1L << IDENTIFIER) | (1L << INTEGER) | (1L << STRING) | (1L << CHAR) | (1L << PIZQ) | (1L << PCIZQ))) != 0)) {
				{
				{
				setState(59);
				statement();
				}
				}
				setState(64);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(65);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	 
		public StatementContext() { }
		public void copyFrom(StatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class RetunStatmmContext extends StatementContext {
		public ReturnStatementContext returnStatement() {
			return getRuleContext(ReturnStatementContext.class,0);
		}
		public RetunStatmmContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PParserVisitor ) return ((PParserVisitor<? extends T>)visitor).visitRetunStatmm(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AssignStatmmContext extends StatementContext {
		public AssignStatementContext assignStatement() {
			return getRuleContext(AssignStatementContext.class,0);
		}
		public AssignStatmmContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PParserVisitor ) return ((PParserVisitor<? extends T>)visitor).visitAssignStatmm(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class IfStatmmContext extends StatementContext {
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public IfStatmmContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PParserVisitor ) return ((PParserVisitor<? extends T>)visitor).visitIfStatmm(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class WhileStatmmContext extends StatementContext {
		public WhileStatementContext whileStatement() {
			return getRuleContext(WhileStatementContext.class,0);
		}
		public WhileStatmmContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PParserVisitor ) return ((PParserVisitor<? extends T>)visitor).visitWhileStatmm(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class DefStatmmContext extends StatementContext {
		public DefStatementContext defStatement() {
			return getRuleContext(DefStatementContext.class,0);
		}
		public DefStatmmContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PParserVisitor ) return ((PParserVisitor<? extends T>)visitor).visitDefStatmm(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PrintStatmmContext extends StatementContext {
		public PrintStatementContext printStatement() {
			return getRuleContext(PrintStatementContext.class,0);
		}
		public PrintStatmmContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PParserVisitor ) return ((PParserVisitor<? extends T>)visitor).visitPrintStatmm(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class FunctionStatmmContext extends StatementContext {
		public FunctionCallStatementContext functionCallStatement() {
			return getRuleContext(FunctionCallStatementContext.class,0);
		}
		public FunctionStatmmContext(StatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PParserVisitor ) return ((PParserVisitor<? extends T>)visitor).visitFunctionStatmm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		try {
			setState(74);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				_localctx = new DefStatmmContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(67);
				defStatement();
				}
				break;
			case 2:
				_localctx = new IfStatmmContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(68);
				ifStatement();
				}
				break;
			case 3:
				_localctx = new RetunStatmmContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(69);
				returnStatement();
				}
				break;
			case 4:
				_localctx = new PrintStatmmContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(70);
				printStatement();
				}
				break;
			case 5:
				_localctx = new WhileStatmmContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(71);
				whileStatement();
				}
				break;
			case 6:
				_localctx = new AssignStatmmContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(72);
				assignStatement();
				}
				break;
			case 7:
				_localctx = new FunctionStatmmContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(73);
				functionCallStatement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefStatementContext extends ParserRuleContext {
		public DefStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defStatement; }
	 
		public DefStatementContext() { }
		public void copyFrom(DefStatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class DefStatmContext extends DefStatementContext {
		public TerminalNode DEF() { return getToken(PParser.DEF, 0); }
		public TerminalNode IDENTIFIER() { return getToken(PParser.IDENTIFIER, 0); }
		public TerminalNode PIZQ() { return getToken(PParser.PIZQ, 0); }
		public ArgListContext argList() {
			return getRuleContext(ArgListContext.class,0);
		}
		public TerminalNode PDER() { return getToken(PParser.PDER, 0); }
		public TerminalNode DOSPUNTOS() { return getToken(PParser.DOSPUNTOS, 0); }
		public SequenceContext sequence() {
			return getRuleContext(SequenceContext.class,0);
		}
		public DefStatmContext(DefStatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PParserVisitor ) return ((PParserVisitor<? extends T>)visitor).visitDefStatm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefStatementContext defStatement() throws RecognitionException {
		DefStatementContext _localctx = new DefStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_defStatement);
		try {
			_localctx = new DefStatmContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(DEF);
			setState(77);
			match(IDENTIFIER);
			setState(78);
			match(PIZQ);
			setState(79);
			argList();
			setState(80);
			match(PDER);
			setState(81);
			match(DOSPUNTOS);
			setState(82);
			sequence();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ArgListContext extends ParserRuleContext {
		public ArgListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argList; }
	 
		public ArgListContext() { }
		public void copyFrom(ArgListContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ArgListtContext extends ArgListContext {
		public TerminalNode IDENTIFIER() { return getToken(PParser.IDENTIFIER, 0); }
		public MoreArgsContext moreArgs() {
			return getRuleContext(MoreArgsContext.class,0);
		}
		public ArgListtContext(ArgListContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PParserVisitor ) return ((PParserVisitor<? extends T>)visitor).visitArgListt(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class ArgVacioContext extends ArgListContext {
		public ArgVacioContext(ArgListContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PParserVisitor ) return ((PParserVisitor<? extends T>)visitor).visitArgVacio(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ArgListContext argList() throws RecognitionException {
		ArgListContext _localctx = new ArgListContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_argList);
		try {
			setState(87);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				_localctx = new ArgListtContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(84);
				match(IDENTIFIER);
				setState(85);
				moreArgs();
				}
				break;
			case PDER:
				_localctx = new ArgVacioContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MoreArgsContext extends ParserRuleContext {
		public MoreArgsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_moreArgs; }
	 
		public MoreArgsContext() { }
		public void copyFrom(MoreArgsContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class MoreArgssContext extends MoreArgsContext {
		public List<TerminalNode> COMA() { return getTokens(PParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(PParser.COMA, i);
		}
		public List<TerminalNode> IDENTIFIER() { return getTokens(PParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(PParser.IDENTIFIER, i);
		}
		public MoreArgssContext(MoreArgsContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PParserVisitor ) return ((PParserVisitor<? extends T>)visitor).visitMoreArgss(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MoreArgsContext moreArgs() throws RecognitionException {
		MoreArgsContext _localctx = new MoreArgsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_moreArgs);
		int _la;
		try {
			_localctx = new MoreArgssContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMA) {
				{
				{
				setState(89);
				match(COMA);
				setState(90);
				match(IDENTIFIER);
				}
				}
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class IfStatementContext extends ParserRuleContext {
		public IfStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifStatement; }
	 
		public IfStatementContext() { }
		public void copyFrom(IfStatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class IfStatmContext extends IfStatementContext {
		public TerminalNode IF() { return getToken(PParser.IF, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<TerminalNode> DOSPUNTOS() { return getTokens(PParser.DOSPUNTOS); }
		public TerminalNode DOSPUNTOS(int i) {
			return getToken(PParser.DOSPUNTOS, i);
		}
		public List<SequenceContext> sequence() {
			return getRuleContexts(SequenceContext.class);
		}
		public SequenceContext sequence(int i) {
			return getRuleContext(SequenceContext.class,i);
		}
		public TerminalNode ELSE() { return getToken(PParser.ELSE, 0); }
		public IfStatmContext(IfStatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PParserVisitor ) return ((PParserVisitor<? extends T>)visitor).visitIfStatm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final IfStatementContext ifStatement() throws RecognitionException {
		IfStatementContext _localctx = new IfStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_ifStatement);
		try {
			_localctx = new IfStatmContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(IF);
			setState(97);
			expression();
			setState(98);
			match(DOSPUNTOS);
			setState(99);
			sequence();
			setState(100);
			match(ELSE);
			setState(101);
			match(DOSPUNTOS);
			setState(102);
			sequence();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WhileStatementContext extends ParserRuleContext {
		public WhileStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_whileStatement; }
	 
		public WhileStatementContext() { }
		public void copyFrom(WhileStatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class WhileStatmContext extends WhileStatementContext {
		public TerminalNode WHILE() { return getToken(PParser.WHILE, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode DOSPUNTOS() { return getToken(PParser.DOSPUNTOS, 0); }
		public SequenceContext sequence() {
			return getRuleContext(SequenceContext.class,0);
		}
		public WhileStatmContext(WhileStatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PParserVisitor ) return ((PParserVisitor<? extends T>)visitor).visitWhileStatm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WhileStatementContext whileStatement() throws RecognitionException {
		WhileStatementContext _localctx = new WhileStatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_whileStatement);
		try {
			_localctx = new WhileStatmContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(WHILE);
			setState(105);
			expression();
			setState(106);
			match(DOSPUNTOS);
			setState(107);
			sequence();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReturnStatementContext extends ParserRuleContext {
		public ReturnStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_returnStatement; }
	 
		public ReturnStatementContext() { }
		public void copyFrom(ReturnStatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class RetunStatmContext extends ReturnStatementContext {
		public TerminalNode RETURN() { return getToken(PParser.RETURN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(PParser.NEWLINE, 0); }
		public RetunStatmContext(ReturnStatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PParserVisitor ) return ((PParserVisitor<? extends T>)visitor).visitRetunStatm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReturnStatementContext returnStatement() throws RecognitionException {
		ReturnStatementContext _localctx = new ReturnStatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_returnStatement);
		try {
			_localctx = new RetunStatmContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(109);
			match(RETURN);
			setState(110);
			expression();
			setState(111);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrintStatementContext extends ParserRuleContext {
		public PrintStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_printStatement; }
	 
		public PrintStatementContext() { }
		public void copyFrom(PrintStatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class PrintStatmContext extends PrintStatementContext {
		public TerminalNode PRINT() { return getToken(PParser.PRINT, 0); }
		public TerminalNode PIZQ() { return getToken(PParser.PIZQ, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode PDER() { return getToken(PParser.PDER, 0); }
		public TerminalNode NEWLINE() { return getToken(PParser.NEWLINE, 0); }
		public PrintStatmContext(PrintStatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PParserVisitor ) return ((PParserVisitor<? extends T>)visitor).visitPrintStatm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrintStatementContext printStatement() throws RecognitionException {
		PrintStatementContext _localctx = new PrintStatementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_printStatement);
		try {
			_localctx = new PrintStatmContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(113);
			match(PRINT);
			setState(114);
			match(PIZQ);
			setState(115);
			expression();
			setState(116);
			match(PDER);
			setState(117);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignStatementContext extends ParserRuleContext {
		public AssignStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignStatement; }
	 
		public AssignStatementContext() { }
		public void copyFrom(AssignStatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class AssignStatmContext extends AssignStatementContext {
		public TerminalNode IDENTIFIER() { return getToken(PParser.IDENTIFIER, 0); }
		public TerminalNode ASIGN() { return getToken(PParser.ASIGN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(PParser.NEWLINE, 0); }
		public AssignStatmContext(AssignStatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PParserVisitor ) return ((PParserVisitor<? extends T>)visitor).visitAssignStatm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AssignStatementContext assignStatement() throws RecognitionException {
		AssignStatementContext _localctx = new AssignStatementContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_assignStatement);
		try {
			_localctx = new AssignStatmContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			match(IDENTIFIER);
			setState(120);
			match(ASIGN);
			setState(121);
			expression();
			setState(122);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionCallStatementContext extends ParserRuleContext {
		public FunctionCallStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionCallStatement; }
	 
		public FunctionCallStatementContext() { }
		public void copyFrom(FunctionCallStatementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FunctionStatmContext extends FunctionCallStatementContext {
		public PrimitiveExpressionContext primitiveExpression() {
			return getRuleContext(PrimitiveExpressionContext.class,0);
		}
		public TerminalNode PIZQ() { return getToken(PParser.PIZQ, 0); }
		public ExpressionListContext expressionList() {
			return getRuleContext(ExpressionListContext.class,0);
		}
		public TerminalNode PDER() { return getToken(PParser.PDER, 0); }
		public TerminalNode NEWLINE() { return getToken(PParser.NEWLINE, 0); }
		public FunctionStatmContext(FunctionCallStatementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PParserVisitor ) return ((PParserVisitor<? extends T>)visitor).visitFunctionStatm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionCallStatementContext functionCallStatement() throws RecognitionException {
		FunctionCallStatementContext _localctx = new FunctionCallStatementContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_functionCallStatement);
		try {
			_localctx = new FunctionStatmContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			primitiveExpression();
			setState(125);
			match(PIZQ);
			setState(126);
			expressionList();
			setState(127);
			match(PDER);
			setState(128);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
